--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 		 
 		 <div class="row">
 		    <div class="col-md-4">
-               <a href="https://www.555.tf/" target="_blank"><img src="img/07.png" class="img-fluid"></a><br>
+               <a href="https://www.555.wf/" target="_blank"><img src="img/07.png" class="img-fluid"></a><br>
                <div class="list-unstyled" align="center"><br>
-                  <li><b><a href="https://www.555.tf/" target="_blank">超酷电脑桌面7-555.tf</a></b></li>
+                  <li><b><a href="https://www.555.wf/" target="_blank">超酷电脑桌面7-555.wf</a></b></li>
                </div>
             </div>
             <div class="col-md-4">
