--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
       <!-- CSS Style sheet-->
       <link href="static/css/bootstrap.min1.css" rel="stylesheet">
       
-   <script async="" src="static/js/adsbygoogle.js" crossorigin="anonymous"></script>
    </head>
    <body>
-      <h1 class="jumbotron" align="center">听松阁</h1>
-      <br>
-
+    <div style="background-image:url(https://jihulab.com/free163/q.zj.cn/-/raw/580541d97d44fdf3d542236e55a9d6efaf569684/assets/bg-top.jpg);background-size:100% 100%;width:100%; height:300px;margin:0px auto;">
+      <table align="center">
+	   <tr>
+	    <td height="300px"></td>
+	    <td>
+       <font size="18px" color="#ffffff">听松阁</font>
+	    </td>
+	   </tr>
+	  </table>
+    </div>
+	<br><br>
+	
       <div class="container">
          <div class="row">
             <div class="col-md-4">
