--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                </div>
             </div>
 			<div class="col-md-4">
-               <a href="./index/win9/" target="_blank"><img src="img/08.png" class="img-fluid"></a><br>
+               <a href="./index/win9/" target="_blank"><img src="img/08-1.png" class="img-fluid"></a><br>
                <div class="list-unstyled" align="center"><br>
                   <li><b><a href="./index/win9/" target="_blank">超酷电脑桌面9-mobi.gs</a></b></li>
                </div>
