--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <!-- Viewport configuration, scaling options -->
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      <title>Welcome to My Navbar-Top Fixed Responsive Navigation Bar</title>
+      <title>电脑桌面导航 - 听松阁</title>
       <meta name="description" content="Design Collection - Pricing Table Design">
       <meta name="author" content="Design Collection">
       <!-- CSS Style sheet-->
